# mkpw

./: Cargo.toml  README.md
.github/workflows/: main.yml
cli/: Cargo.toml  README.md
cli/src/: encoding.rs  main.rs
cli/tests/: integration_test.rs
password-maker/: Cargo.toml  README.md
password-maker/src/: lib.rs
password-maker/tests/: integration_test.rs
src/: encoding.rs  main.rs
tests/: integration_test.rs
