[workspace]
resolver = "2"

members = [
    "password-maker",
]

[workspace.package]
edition = "2021"
rust-version = "1.82.0"
authors = ["yutotnh <57719497+yutotnh@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
include = ["src/**/*", "README.md", "LICENSE*"]

[package]
name = "mkpw"
version = "0.1.1"
edition.workspace = true
description = "Highly customizable password generation tool. 🔑"
homepage = "https://github.com/yutotnh/mkpw/"
repository = "https://github.com/yutotnh/mkpw/"
readme = "README.md"
keywords = ["password", "password-generator", "cli", "utility"]
rust-version.workspace = true
authors.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
arboard = "3.4.1"
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.44"
encoding_rs = "0.8.35"
password-maker = { version = "0.1.2", path = "./password-maker" }
unicode-segmentation = "1.12.0"

[dev-dependencies]
assert_cmd = "2.0.16"
