[package]
name = "mkpw"
version = "0.1.0"
edition.workspace = true
description = "Highly customizable password generation tool. 🔑"
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
arboard = "3.4.1"
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.33"
encoding_rs = "0.8.34"
password-maker = { path = "../password-maker" }
unicode-segmentation = "1.12.0"

[dev-dependencies]
assert_cmd = "2.0.16"
