[package]
name = "password-maker"
version = "0.1.0"
edition.workspace = true
description = "Highly customizable password generation library.🔑"
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
indexmap = "2.6.0"
rand = "0.8.5"
unicode-segmentation = "1.12.0"

[dev-dependencies]
rand_chacha = "0.3.1"
