[package]
name = "password-maker"
version = "0.1.2"
edition.workspace = true
description = "Highly customizable password generation library.🔑"
homepage = "https://github.com/yutotnh/mkpw/tree/main/password-maker"
repository = "https://github.com/yutotnh/mkpw/tree/main/password-maker"
readme = "README.md"
keywords = ["password", "password-generator", "library", "utility"]
rust-version.workspace = true
authors.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
indexmap = "2.7.0"
rand = "0.8.5"
unicode-segmentation = "1.12.0"

[dev-dependencies]
rand_chacha = "0.3.1"
